force-app/main/default/objects/Scorecard__c/Scorecard__c.object-meta.xml
<CustomObject>
    <label>Scorecard</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>