force-app/main/default/objects/Scorecard__c/fields/Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scorecard</relationshipName>
    <type>Lookup</type>
</CustomField>