force-app/main/default/objects/Scorecard__c/fields/Grant_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Grant_Solicitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant/Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Scorecard</relationshipLabel>
    <relationshipName>Scorecard</relationshipName>
    <type>Lookup</type>
</CustomField>