force-app/main/default/objects/Scorecard__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Scorecard</relationshipLabel>
    <relationshipName>Scorecard</relationshipName>
    <type>Lookup</type>
</CustomField>