force-app/main/default/objects/Scorecard__c/fields/Scoring_Type__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Type__c</fullName>
    <label>Scoring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Score Questions</fullName>
            </value>
            <value>
                <fullName>Score Answers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>