force-app/main/default/objects/Scorecard__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>Scorecard_Metric__c.Maximum_Points__c</summarizedField>
    <summaryFilterItems>
        <field>Scorecard_Metric__c.Layout_Type__c</field>
        <operation>equals</operation>
        <value>Field</value>
    </summaryFilterItems>
    <summaryForeignKey>Scorecard_Metric__c.Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>