force-app/main/default/objects/Scorecard__c/validationRules/Scorecard_with_Program_Questions.validationRule-meta.xml
<ValidationRule>
    <fullName>Scorecard_with_Program_Questions</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Grant_Solicitation__c )) &amp;&amp; 
ISBLANK( Proposal__c ) &amp;&amp;
TEXT(Scoring_Type__c) != &apos;Score Questions&apos;</errorConditionFormula>
    <errorDisplayField>Scoring_Type__c</errorDisplayField>
    <errorMessage>Scoring Type should be score questions.</errorMessage>
</ValidationRule>