force-app/main/default/objects/Scorecard__c/validationRules/Scorecard_with_Program_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Scorecard_with_Program_Request</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Grant_Solicitation__c)) &amp;&amp;  
NOT(ISBLANK(Proposal__c))</errorConditionFormula>
    <errorMessage>Scorecard cannot be associate with both funding program &amp; funding request.</errorMessage>
</ValidationRule>