force-app/main/default/objects/Scorecard__c/validationRules/Scorecard_with_Request_Answers.validationRule-meta.xml
<ValidationRule>
    <fullName>Scorecard_with_Request_Answers</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( Proposal__c )) &amp;&amp; 
ISBLANK( Grant_Solicitation__c  ) &amp;&amp;
TEXT(Scoring_Type__c) != &apos;Score Answers&apos;</errorConditionFormula>
    <errorDisplayField>Scoring_Type__c</errorDisplayField>
    <errorMessage>Scoring Type should be Score Answers.</errorMessage>
</ValidationRule>