force-app/main/default/objects/Scorecard__c/listViews/Scorecards_In_Progress.listView-meta.xml
<ListView>
    <fullName>Scorecards_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Scored_Points__c</columns>
    <columns>Total_Points__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Scorecards - In Progress</label>
</ListView>